--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="content" class="content">
-
-        <p>Here is where the content is</p>
-
-    </div>
-
-    <div id="grid-container">
-
-    </div>
+    <p>BEHOLD! A GRID!</p>
+    <div id="container" class="container"></div>
 
 
 </body>
