dynamic grid system
added slider that updates the grid values, making the grid grow or shrink as the user slides the bar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>BEHOLD! A GRID!</p>
-    <div id="container" class="container"></div>
 
+    <p>BEHOLD! A GRID!</p>
+    <div class="slidecontainer">
+        <p id="slidervalue">5</p>
+        <input type="range" min="2" max="15" class="slider" id="myRange"> 
+    </div>
+        <div id="container" class="container"></div>
 
 </body>
 </html>
