--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <p>BEHOLD! A GRID!</p>
-    <div class="slidecontainer">
-        <p id="slidervalue">5</p>
-        <input type="range" min="2" max="15" class="slider" id="myRange"> 
+    <div class="content">
+        <p>BEHOLD! A GRID!</p>
+        <div class="slidecontainer">
+            <p id="slidervalue">5</p>
+            <input type="range" min="2" max="20" class="slider" id="myRange"> 
+        </div><br>
+            <div id="container" class="container"></div>
     </div>
-        <div id="container" class="container"></div>
-
 </body>
 </html>
